Adding maint-3.8 branch

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -18,28 +18,9 @@
 # the Free Software Foundation, Inc., 51 Franklin Street,
 # Boston, MA 02110-1301, USA.
 
-########################################################################
-# Include python install macros
-########################################################################
 include(GrPython)
-if(NOT PYTHONINTERP_FOUND)
-    return()
-endif()
 
-########################################################################
-# Install python sources
-########################################################################
 GR_PYTHON_INSTALL(
-    FILES
-    __init__.py
-    framer.py
-    decoder.py DESTINATION ${GR_PYTHON_DIR}/adsb
+    PROGRAMS
+    DESTINATION bin
 )
-
-########################################################################
-# Handle the unit tests
-########################################################################
-include(GrTest)
-
-set(GR_TEST_TARGET_DEPS gnuradio-adsb)
-set(GR_TEST_PYTHON_DIRS ${CMAKE_BINARY_DIR}/swig)
